Add the ability to comment on chunk
